# BirtualMachine

./: .clang-format  .clang-tidy  .clangd  .cmake-format.json  .dir-locals.el  .editorconfig  .gitignore  .local_vimrc.vim  123.ebasm  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md  bm.c  bm.cpp  bmi.c  build.zig  ebasm.c  fixed_stack.hpp  main.c  premake5.lua  pyproject.toml
bm/: inst.py
examples/: 123.ebasm  fib.basm  fib.ebasm
src/: basm.c  bm.c  bm.h  bme.c  bmi.c  debasm.c  nan.c
